--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,20 +22,23 @@
     <section class="begin">
         <div class="card text-center">
             <div class="card-header">
-              Food Truck Finder
+                Food Truck Finder
             </div>
             <div class="card-body">
-              
-              <p class="card-text">Tired of fast food, wanna get into the street food scene? 
-                  Click below to find a food truck near you!</p>
-              <a href="#" class="btn btn-primary">Begin Search</a>
+
+                <p class="card-text">Tired of fast food, wanna get into the street food scene?
+                    Click below to find a food truck near you!</p>
+                <a href="#" class="btn btn-primary" id="search">Begin Search</a>
             </div>
-          </div>
+        </div>
     </section>
 
     <footer>
-        <a href="https://github.com/Jdiaz240">Josh Diaz</a>
-        <a href="https://github.com/schaparro08">Stephanie Chaparro-Roldan></Chaparro-Roldan></a>
+        <nav class="navbar fixed-bottom navbar-dark bg-dark">
+            <button href="https://github.com/Jdiaz240">Josh Diaz</button>
+            <button href="https://github.com/schaparro08">Stephanie Chaparro-Roldan</Chaparro-Roldan></a>
+        </nav>
+
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
