--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="./Assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/c0d143f7f1.js" crossorigin="anonymous"></script>
     <link href="./Assets/css/style.css" rel="stylesheet">
     <title>Food Truck Finder</title>
 </head>
@@ -34,11 +35,10 @@
     </section>
 
     <footer>
-        <nav class="navbar fixed-bottom navbar-dark bg-dark">
-            <button href="https://github.com/Jdiaz240">Josh Diaz</button>
-            <button href="https://github.com/schaparro08">Stephanie Chaparro-Roldan</Chaparro-Roldan></a>
+        <nav id="footer" class="navbar fixed-bottom navbar-dark bg-dark">
+            <a href="https://github.com/Jdiaz240" class="fa-brands fa-github-square"> Joshua Diaz</a>
+            <a href="https://github.com/schaparro08" class="fa-brands fa-github-square"> Stephanie Chaparro-Roldan</a>
         </nav>
-
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
