--- a/index.html
+++ b/index.html
@@ -29,10 +29,33 @@
 
                 <p class="card-text">Tired of fast food, wanna get into the street food scene?
                     Click below to find a food truck near you!</p>
-                <a href="#" class="btn btn-primary" id="search">Begin Search</a>
+                <!-- <a href="#" class="btn btn-primary" id="search">Begin Search</a> -->
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    Launch demo modal
+                  </button>
+                  
+                  <!-- Modal -->
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
+                        <div class="modal-header">
+                          <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                          ...
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                          <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
             </div>
         </div>
     </section>
+    <!-- Button trigger modal -->
 
     <footer>
         <nav id="footer" class="navbar fixed-bottom navbar-dark bg-dark">
