--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   >
                     Close
                   </button>
-                  <button type="button" class="btn btn-primary">Search</button>
+                  <button id="submit" type="button" class="btn btn-primary">Search</button>
                 </div>
               </div>
             </div>
