additon of checked boxes

--- a/index.html
+++ b/index.html
@@ -122,14 +122,15 @@
                     >
                       Dropdown
                     </button> -->
-                    <section class="container">
+                    <section class="container1">
                     <label for="chinese"
                     >Chinese</label
                   >
                     <input
+                    class="check"
                       type="checkbox"
                       name="myCheckbox"
-                      value="1"
+                      value="chinese"
                       id="chinese"
                       onclick="selectOnlyThis(this)"
                     />
@@ -137,29 +138,26 @@
                     >American</label
                   >
                     <input
+                    class="check"
                       type="checkbox"
                       name="myCheckbox"
-                      value="2"
+                      value="american"
                       id="american"
+                      
                       onclick="selectOnlyThis(this)"
                     />
                     <label for="mexican"
                     >Mexican</label
                   >
                     <input
+                    class="check"
                       type="checkbox"
                       name="myCheckbox"
-                      value="3"
+                      value="mexican"
                       id="mexican"
                       onclick="selectOnlyThis(this)"
                     />
                   </section>
-                    <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                      <li><button id="drop1" class="dropdown-item drops" type="button">Chinese</button></li>
-                      <li><button id="drop2" class="dropdown-item drops" type="button">Mexican</button></li>
-                      <li><button id="drop3" class="dropdown-item drops" type="button">American</button></li>
-                      <li><button id="drop4" class="dropdown-item drops" type="button">Indian</button></li>
-                    </ul> -->
                   </div>
                 </div>
                 <div class="modal-footer">
