getting data back from the api and taking into account different inputs.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                       name="myCheckbox"
                       value="chinese"
                       id="chinese"
-                      onclick="test()"
+                      onclick="selectOnlyThis(this)"
                     />
                     <label for="american"
                     >American</label
@@ -155,7 +155,7 @@
                       name="myCheckbox"
                       value="mexican"
                       id="mexican"
-                      onclick="test()"
+                      onclick="selectOnlyThis(this)"
                     />
                   </section>
                   </div>
