additon of results section

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   >
                     Close
                   </button>
-                  <button id="submit" type="button" class="btn btn-primary">Search</button>
+                  <button href= "./results.html"id="submit" type="button" class="btn btn-primary">Search</button>
                 </div>
               </div>
             </div>
