--- a/results.html
+++ b/results.html
@@ -30,7 +30,19 @@
       </nav>
     </header>
     <section>
-      
+        <div class="container" id="results-container">
+            <div class="row" id="row1" >
+              <!-- <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+              <div class="col">
+                Column
+              </div>
+            </div> -->
+          </div>
     </section>
 
     <footer>
