adding hide class to modal

--- a/index.html
+++ b/index.html
@@ -168,11 +168,28 @@
                   >
                     Close
                   </button>
-                  <button href= "./results.html"id="submit" type="button" class="btn btn-primary">Search</button>
+                  <!-- <a href="./results.html">   -->
+                  <button id="submit" type="button" class="btn btn-primary">Search</button>
+                  <!-- </a> -->
                 </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="container">
+        <div class="row" id="row1">
+          <!-- <div class="col">
+            Column
+          </div>
+          <div class="col">
+            Column
+          </div>
+          <div class="col">
+            Column
+          </div> -->
         </div>
       </div>
     </section>
